<resources>

    <!-- App name on Action bar -->
    <string name="app_name">Inventory App</string>

    <!-- Label for overflow menu option that inserts fake product data into the app [CHAR LIMIT=20] -->
    <string name="action_insert_dummy_data">Insert Dummy Data</string>

    <!-- Label for overflow menu option that deletes all products data in the app [CHAR LIMIT=20] -->
    <string name="action_delete_all_entries">Delete All Products</string>

    <!-- Title for the activity to add a new product [CHAR LIMIT=20] -->
    <string name="editor_activity_title_new_product">Add a Product</string>

    <!-- Title for the activity to edit an existing product [CHAR LIMIT=20] -->
    <string name="editor_activity_title_edit_product">Edit Product</string>

    <!-- Label for editor menu option to save product and leave editor [CHAR LIMIT=20] -->
    <string name="action_save">Save</string>

    <!-- Label for editor overflow menu option that deletes the current product [CHAR LIMIT=20] -->
    <string name="action_delete">Delete</string>

    <!-- Label for name category in the editor [CHAR LIMIT=30] -->
    <string name="category_product_name">Product name</string>

    <!-- Label for supplier name category in the editor [CHAR LIMIT=30] -->
    <string name="category_supplier_name">Supplier name</string>

    <!-- Label for supplier email category in the editor [CHAR LIMIT=30] -->
    <string name="category_supplier_email">Supplier email</string>

    <!-- Label for quantity category in the editor [CHAR LIMIT=30] -->
    <string name="category_quantity">Product quantity</string>

    <!-- Label for price information in the editor [CHAR LIMIT=30] -->
    <string name="category_price">Product price</string>

    <!-- Label for image button in the editor -->
    <string name="category_image">Image</string>

    <!-- Text for image button in the editor [CHAR LIMIT=20] -->
    <string name="image_button">Insert Image</string>

    <!-- Text hint for name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_product_name">Name</string>

    <!-- Text hint for quantity field in the editor [CHAR LIMIT=3] -->
    <string name="hint_product_quantity">Quantity</string>

    <!-- Text hint for price field in the editor [CHAR LIMIT=3] -->
    <string name="hint_product_price">Price</string>

    <!-- Text hint for supplier name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_supplier_name">Supplier name</string>

    <!-- Text hint for supplier email field in the editor -->
    <string name="hint_supplier_email">Supplier email</string>

    <!-- Units for price of the product (dollars) [CHAR LIMIT=1] -->
    <string name="unit_product_price">$</string>

    <!-- Toast message in editor when new product has been successfully inserted -->
    <string name="editor_insert_product_successful">Product saved</string>

    <!-- Toast message in editor when new product has failed to be inserted -->
    <string name="editor_insert_product_failed">Error with saving product</string>

    <!-- Toast message in editor when current product was successfully updated -->
    <string name="editor_update_product_successful">Product updated</string>

    <!-- Toast message in editor when current product has failed to be updated -->
    <string name="editor_update_product_failed">Error with updating product</string>

    <!--Toast message for missing name when you create a new product -->
    <string name="missing_name">You should specify a name!</string>

    <!--Toast message for missing quantity when you create a new product -->
    <string name="missing_quantity">You should specify a quantity!</string>

    <!--Toast message for missing price when you create a new product -->
    <string name="missing_price">You should specify a price!</string>

    <!--Toast message for missing supplier name when you create a new product -->
    <string name="missing_supplier_name">You should specify a supplier name!</string>

    <!--Toast message for missing supplier email when you create a new product -->
    <string name="missing_supplier_email">You should specify a supplier email!</string>

    <!--Toast message for missing image when you create a new product -->
    <string name="missing_image">You should specify an image!</string>

    <!--Toast message for invalid email address -->
    <string name="invalid_email">Invalid Email Address</string>

    <!-- Toast message in editor when current product was successfully deleted -->
    <string name="editor_delete_product_successful">Product deleted</string>

    <!-- Toast message in editor when current product has failed to be deleted -->
    <string name="editor_delete_product_failed">Error with deleting product</string>

    <!-- Toast message when a product was sold -->
    <string name="product_sold">Product sold</string>

    <!-- Toast message when no product was sold because of a lack of quantity -->
    <string name="no_more_products">No more products to sell</string>

    <!-- Dialog message when user is leaving editor but hasn't saved changes -->
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>

    <!-- Dialog button text for the option to discard a user's changes [CHAR LIMIT=20] -->
    <string name="discard">Discard</string>

    <!-- Dialog button text for the option to keep editing the current product [CHAR LIMIT=20] -->
    <string name="keep_editing">Keep Editing</string>

    <!-- Dialog message to ask the user to confirm deleting the current product -->
    <string name="delete_dialog_msg">Delete this product?</string>

    <!-- Dialog button text for the option to confirm deleting the current product [CHAR LIMIT=20] -->
    <string name="delete">Delete</string>

    <!-- Dialog button text for the option to cancel deletion of the current product [CHAR LIMIT=20] -->
    <string name="cancel">Cancel</string>

    <!-- Title text for the empty view, which describes the empty box image [CHAR LIMIT=50] -->
    <string name="empty_view_title_text">It\'s a bit lonely here&#8230;</string>

    <!-- Subtitle text for the empty view that prompts the user to add a product [CHAR LIMIT=50] -->
    <string name="empty_view_subtitle_text">Get started by adding a product</string>

    <!-- Label for the thumbnail's product in the activity product [CHAR LIMIT=20] -->
    <string name="thumbnail">Product\'s thumbnail</string>

    <!-- Label for the image holder in the activity editor [CHAR LIMIT=20] -->
    <string name="image_holder">Image holder</string>

    <!-- Label for the quantity text in the activity product [CHAR LIMIT=20] -->
    <string name="quantity_text">Quantity:&#160;</string>

    <!-- Label for the sale button in the activity product -->
    <string name="sale_text">Sale</string>

    <!-- Label for the price text in the activity product -->
    <string name="price_text">Price:&#160;$</string>

    <!--Text for minus button-->
    <string name="minus">-</string>

    <!--Text for plus button-->
    <string name="plus">+</string>

    <!--Text for order more button-->
    <string name="action_order">Order more</string>

</resources>
